# marry-tone-claude

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
.omc/: project-memory.json
.omc/sessions/: 52905ec4-12c1-42c9-b224-35e29d14a37b.json  919ecdc8-2eac-4ae7-8d80-ba5ab8218cdf.json  a6dc32a9-b65c-4f94-b99c-dfadab60ca65.json  ef45c969-eea3-4a70-88f7-4b73ed378287.json
.turbo/cache/: 3cc311bef755ea21-manifest.json  3cc311bef755ea21-meta.json  3cc311bef755ea21.tar.zst  44f4aaf812581fd8-manifest.json  44f4aaf812581fd8-meta.json  44f4aaf812581fd8.tar.zst  4cdf926abe76d617-manifest.json  4cdf926abe76d617-meta.json  4cdf926abe76d617.tar.zst  99052205527582c2-manifest.json  99052205527582c2-meta.json  99052205527582c2.tar.zst
app/: globals.css  layout.tsx  page.tsx
app/board/: page.tsx
app/quiz/: page.tsx
app/results/: page.tsx
apps/web/: .eslintrc.json  Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web-e2e/: package.json  playwright.config.ts  tsconfig.json
docs/: blueprint.md  implementation-plan.md  sprint-1.md  sprint-2.md
lib/: recommendations.ts  types.ts
services/api/: Dockerfile  (+4 more)
services/ml/: Dockerfile  pyproject.toml  requirements.txt
services/ml/app/: main.py
services/ml/app/routers/: __init__.py  diagnosis.py
services/ml/app/schemas/: __init__.py  common.py  diagnosis.py
services/ml/tests/: test_health.py
store/: useStore.ts
(+49 files in other folders)
