[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marry-tone-ml"
version = "0.1.0"
description = "MarryTone ML Sidecar — personal color, body measurement, skeleton-type analysis"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "mediapipe>=0.10.0",
  "opencv-python-headless>=4.9.0",
  "scikit-learn>=1.4.0",
  "numpy>=1.26.0",
  "pillow>=10.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]
