[tool.poetry]
name = "marry-tone-ml"
version = "0.1.0"
description = "MarryTone ML Sidecar — personal color & skeleton diagnosis"
authors = ["MarryTone Team"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
mediapipe = "^0.10.0"
opencv-python-headless = "^4.9.0"
scikit-learn = "^1.5.0"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
